# Smart-Home-Automation-System-in-CPP

./: CMakeLists.txt  README.md
include/: device_commands.hpp  device_groups.hpp  devices.hpp  devices_adapter.hpp  devices_facade.hpp  devices_factory.hpp  devices_hub.hpp  light_automation.hpp
src/: device_commands.cpp  device_groups.cpp  devices.cpp  devices_adapter.cpp  devices_facade.cpp  devices_factory.cpp  devices_hub.cpp  light_automation.cpp  main.cpp
